apps/vendor-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vendor-manager
  namespace: dev
spec:
  selector:
    app: vendor-manager
  ports:
    - port: 80
      targetPort: 8000
