apps/vendor-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vendor-manager
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [vendor-manager.durczok.ovh]
      secretName: vendor-manager-tls
  rules:
    - host: vendor-manager.durczok.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vendor-manager
                port:
                  number: 80
